테스트 코드 중복 제거 (RecruitmentCustomRepositoryTest)